--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <script src="https://maps.mapmyindia.com/covid-places/showNearbyCovidPlacesOnMap.js?category=HSPVCC"></script>
     <!-- <script src="https://kit.fontawesome.com/433888fe69.js" crossorigin="anonymous"></script> -->
     <!-- <i class="fa fa-envelope"></i><i class="fa fa-key"></i> -->
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.1/mustache.min.js"
         integrity="sha512-3GRj7sme01zpWwRNPNy48Rda1bD9cq34lqYG5vb8ZXGc+wRqsoBJ3+AC25IYW5w5SrWlzHqIpNIxZt5QF9sXLg=="
         crossorigin="anonymous"></script>
@@ -38,88 +37,15 @@
         <button id="btn" onclick="Interface.setDistance()">Start</button>
     </div>
 
-    <!-- <h1>RWD List to Table</h1>
-    <table class="rwd-table">
-      <tr>
-        <th>Movie Title</th>
-        <th>Genre</th>
-        <th>Year</th>
-        <th>Gross</th>
-      </tr>
-      <tr>
-        <td data-th="Movie Title">Star Wars</td>
-        <td data-th="Genre">Adventure, Sci-fi</td>
-        <td data-th="Year">1977</td>
-        <td data-th="Gross">$460,935,665</td>
-      </tr>
-      <tr>
-        <td data-th="Movie Title">Howard The Duck</td>
-        <td data-th="Genre">"Comedy"</td>
-        <td data-th="Year">1986</td>
-        <td data-th="Gross">$16,295,774</td>
-      </tr>
-      <tr>
-        <td data-th="Movie Title">American Graffiti</td>
-        <td data-th="Genre">Comedy, Drama</td>
-        <td data-th="Year">1973</td>
-        <td data-th="Gross">$115,000,000</td>
-      </tr>
-    </table> -->
-
-
-
-
-    <div class="containerTable" id="viewCenters">
-        <table>
-            <thead>
-                <tr>
-                    <th>Column 1</th>
-                    <th>Column 2</th>
-                    <th>Column 3</th>
-                    <th>Column 4</th>
-                    <th>Column 5</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Cell 1</td>
-                    <td>Cell 2</td>
-                    <td>Cell 3</td>
-                    <td>Cell 4</td>
-                    <td>Cell 5</td>
-                </tr>
-                <tr>
-                    <td>Cell 1</td>
-                    <td>Cell 2</td>
-                    <td>Cell 3</td>
-                    <td>Cell 4</td>
-                    <td>Cell 5</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <!-- <div id="nearby-covid-places-mapmyindia">
-    <script type="text/javascript">
-        loadNearbyCovidCentresMapmyIndiaDiv(document.getElementById("nearby-covid-places-mapmyindia"));
-    </script>
-    </div> -->
+    <div class="containerTable" id="viewCenters"></div>
 
 </body>
 
 </html>
 
 
-<!-- from urllib.parse import urlencode, urlparse, parse_qs
-
-from lxml.html import fromstring
-from requests import get
-
-raw = get("https://www.google.com/search?q=StackOverflow").text
-page = fromstring(raw)
-
-for result in page.cssselect(".r a"):
-    url = result.get("href")
-    if url.startswith("/url?"):
-        url = parse_qs(urlparse(url).query)['q']
-    print(url[0]) -->
+   <!-- <div id="nearby-covid-places-mapmyindia">
+    <script type="text/javascript">
+        loadNearbyCovidCentresMapmyIndiaDiv(document.getElementById("nearby-covid-places-mapmyindia"));
+    </script>
+    </div> -->
