--- a/index.html
+++ b/index.html
@@ -37,10 +37,21 @@
     <button id="btn" onclick="Interface.setDistance()">Start</button>
   </div>
 
-  <!-- <div class="containerTable" id="viewCenters"></div> -->
+  <div class="btn-group" id = "roundAge">
+    <button id = "roundB">18+</button>
+    <button id = "roundB">45+</button>
+    <button id = "roundB">All</button>
+  </div>
+
+  <div class="btn-group" id = "roundVaccine">
+    <button id = "roundB">Covisheild</button>
+    <button id = "roundB">Covaxin</button>
+    <button id = "roundB">Both</button>
+  </div>
 
   <section>
     <div class="tbl-header">
+    
       <table>
         <thead>
           <tr>
