--- a/index.html
+++ b/index.html
@@ -37,37 +37,39 @@
     <button id="btn" onclick="Interface.setDistance()">Start</button>
   </div>
 
-  <div class="btn-group" id = "roundAge">
-    <button id = "roundB">18+</button>
-    <button id = "roundB">45+</button>
-    <button id = "roundB">All</button>
-  </div>
-
-  <div class="btn-group" id = "roundVaccine">
-    <button id = "roundB">Covisheild</button>
-    <button id = "roundB">Covaxin</button>
-    <button id = "roundB">Both</button>
-  </div>
-
-  <section>
-    <div class="tbl-header">
-    
-      <table>
-        <thead>
-          <tr>
-            <th>Centrer Name</th>
-            <th>District</th>
-            <th>State</th>
-            <th>Date</th>
-            <th>Availability</th>
-          </tr>
-        </thead>
-      </table>
+  <div>
+    <div class="a">
+      <div class="btn-group" id="roundAge">
+        <button id="roundB">18+</button>
+        <button id="roundB">45+</button>
+        <!-- <button id="roundB">All</button> -->
+        <button id="roundB">Covisheild</button>
+        <button id="roundB">Covaxin</button>
+        <!-- <button id="roundB">Both</button> -->
+      </div>
     </div>
-    <div class="tbl-content" id="viewCenters">
-    </div>
-  </section>
 
+    <section id="tab">
+      <div class="tbl-header">
+
+        <table>
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Name</th>
+              <th>Address</th>
+              <th>Availability</th>
+              <th>Age</th>
+              <th>Fee Type</th>
+              <th>Vaccine</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+      <div class="tbl-content" id="viewCenters">
+      </div>
+    </section>
+  </div>
 
 </body>
 
