--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vaccination centre</title>
-  <link rel="shortcut icon" href="screenshot/logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Screenshot/logo2.png" type="image/x-icon">
 
 </head>
 
 <body>
 
-  <header id="title"><img src="screenshot/logoNew.png"></header>
+  <header id="title"><img src="Screenshot/logoNew.png"></header>
   <div>
 
     <div class="a">
