--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
   <div>
 
     <div class="a">
+      <div class="slidecontainer">
+        <input id="myRange" type="range" min="50" max="1000" value="50" onchange="StaticData.getCentersByPincode(value)">
+        <p style="color: white;"><span id="demo"></span></p>
+      </div>
       <div class="btn-group" id="roundAge">
         <button class="roundB" id="age18" value="18" onclick="Interface.setFilter({'min_age_limit':18})">18+</button>
         <button class="roundB" id="age45" value="45" onclick="Interface.setFilter({'min_age_limit':45})">45+</button>
@@ -45,26 +49,17 @@
           onclick="Interface.setFilter({'vaccine':'SPUTNIK'})">Sputnik</button>
         <button class="roundB" id="all" value="All" onclick="Interface.setFilter()">All</button>
       </div>
+    
     </div>
-    <section id="tab">
+
+    <section>
+
       <div class="tbl-content" id="viewCenters">
       </div>
     </section>
 
-    <!-- <div id="nearby-covid-places-mapmyindia">
-    <script type="text/javascript">
-        loadNearbyCovidCentresMapmyIndiaDiv(document.getElementById("nearby-covid-places-mapmyindia"));
-    </script>
-    </div> -->
-
-  
-    <!-- <div class="slidecontainer">
-    <input type="range" min="50" max="10000" value="1000" class="slider" id="myRange" onchange="StaticData.getCentersByPincode(value)">
-    <p>Value: <span id="demo"></span></p>
-    </div> -->
   </div>
 
 </body>
 
 </html>
-
