--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="container.css" />
   <link rel="stylesheet" href="buttonGroup.css" />
   <link rel="stylesheet" href="slider.css" />
+  <link rel="stylesheet" href="background.css" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,69 +33,84 @@
 </head>
 
 <body>
-  <header id="title">
-    <!-- <img id="logo" onClick="location.reload()" src="screenshot/logo.png" /> -->
-    <div class="head_text1" onClick="location.reload()">Vaccine Availability Checker</div>
-    <div class="head_text2">Sakhi Learning LLP</div>
-  </header>
-  <div class="row d-flex justify-content-center">
-    <div class="container my-container">
-      <div class="row my-row">
-        <div class="col-md-12 col-sm-12 my-col">
-          <div class="all_buttons">
-            <div class="range">
-              <div class="sliderValue">
-                <span>5</span>
+  <div id="vanta-canvas">
+    <header id="title">
+      <!-- <img id="logo" onClick="location.reload()" src="screenshot/logo.png" /> -->
+      <div class="head_text1" onClick="location.reload()">Vaccine Availability Checker</div>
+      <div class="head_text2">Sakhi Learning LLP</div>
+    </header>
+    <div class="row d-flex justify-content-center">
+      <div class="container my-container">
+        <div class="row my-row">
+          <div class="col-md-12 col-sm-12 my-col">
+            <div class="all_buttons">
+              <div class="range">
+                <div class="sliderValue">
+                  <span>5</span>
+                </div>
+                <div class="field">
+                  <div class="value_left">5 KM</div>
+                  <input type="range" min="5" max="50" value="5" id="sliderBar"
+                    onchange="StaticData.getCentersByPincode(value)" />
+                  <div class="value_right">50 KM</div>
+                </div>
               </div>
-              <div class="field">
-                <div class="value_left">5 KM</div>
-                <input type="range" min="5" max="50" value="5" id="sliderBar"
-                  onchange="StaticData.getCentersByPincode(value)" />
-                <div class="value_right">50 KM</div>
-              </div>
-            </div>
-            <div class="btn_parent">
-              <div class="btn-group">
+              <div class="btn_parent">
+                <div class="btn-group">
 
 
-                <select onchange="Interface.setFilter({'min_age_limit':value})" class="dd" name="age" id="ageSelect">
-                  <option id="age" value="Age" hidden selected>Age</option>
-                  <option value="18">18+</option>
-                  <option value="45">45+</option>
-                </select>
-                <select onchange="Interface.setFilter({'vaccine':value})" class="dd" name="vaccine" id="vaccineSelect">
-                  <option id="vaccine" value="Vaccine" hidden selected>Vaccine</option>
-                  <option value="COVISHIELD">Covisheild</option>
-                  <option value="COVAXIN">Covaxin</option>
-                  <option value="SPUTNIK">Sputnik</option>
-                </select>
-                <select onchange="Interface.setFilter({'fee_type':value})" class="dd" name="fee" id="feeSelect">
-                  <option id="fee" value="Fee" hidden selected>Fee Type</option>
-                  <option value="Free">Free</option>
-                  <option value="Paid">Paid</option>
-                </select>
-                <button type="button" id="all" value="All" onclick="Interface.setFilter()">
-                  All
-                </button>
+                  <select onchange="Interface.setFilter({'min_age_limit':value})" class="dd" name="age" id="ageSelect">
+                    <option id="age" value="Age" hidden selected>Age</option>
+                    <option value="18">18+</option>
+                    <option value="45">45+</option>
+                  </select>
+                  <select onchange="Interface.setFilter({'vaccine':value})" class="dd" name="vaccine"
+                    id="vaccineSelect">
+                    <option id="vaccine" value="Vaccine" hidden selected>Vaccine</option>
+                    <option value="COVISHIELD">Covisheild</option>
+                    <option value="COVAXIN">Covaxin</option>
+                    <option value="SPUTNIK">Sputnik</option>
+                  </select>
+                  <select onchange="Interface.setFilter({'fee_type':value})" class="dd" name="fee" id="feeSelect">
+                    <option id="fee" value="Fee" hidden selected>Fee Type</option>
+                    <option value="Free">Free</option>
+                    <option value="Paid">Paid</option>
+                  </select>
+                  <button type="button" id="all" value="All" onclick="Interface.setFilter()">
+                    All
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row" style="justify-content: center;">
-        <div class=".col-md-3 .col-md-6 .col-md-3">
+        <div class="row" style="justify-content: center;">
+          <div class=".col-md-3 .col-md-6 .col-md-3">
 
-          <div class="tblContent" id="viewCenters"></div>
-          <div class="tblContent" id="viewCentersInMobile">Hello</div>
+            <div class="tblContent" id="viewCenters"></div>
+            <div class="tblContent" id="viewCentersInMobile">Hello</div>
 
+          </div>
         </div>
       </div>
-      <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13927.579210352733!2d78.96276174999998!3d29.226648649999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1624638799432!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
     </div>
   </div>
-  
-  
 
+  <!-- 2nd -->
+  <div class="learnmore">
+    <div style="display: flex;">
+    <div style="margin-left: auto;background-color: black;width: 25%;border-bottom-left-radius: 30px;border-top-left-radius: 30px;text-align:center;color: white;padding: 6% 6% 0% 1%;font-weight: 400;font-size: x-large;">Masks can save lives</div>
+      <img
+        style="width: 60%;border-bottom-right-radius: 30px;border-top-right-radius: 30px;margin-right: auto;display: block;"
+        src="screenshot/learnmore.png">
+    </div>
+  </div>
+
+  <!-- 3rd  -->
+  <div id="vanta-canvas-aboutus"></div>
+
+
+  <!-- ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
   <script src="https://maps.mapmyindia.com/covid-places/showNearbyCovidPlacesOnMap.js?category=HSPVCC"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.1/mustache.min.js"
     integrity="sha512-3GRj7sme01zpWwRNPNy48Rda1bD9cq34lqYG5vb8ZXGc+wRqsoBJ3+AC25IYW5w5SrWlzHqIpNIxZt5QF9sXLg=="
@@ -104,6 +120,43 @@
   <script src="interface.js"></script>
   <script src="staticData.js"></script>
   <script src="functions.js"></script>
+
+  <!-- //HOME BACKGROUND  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.18/vanta.globe.min.js"></script>
+  <script type="text/javascript">
+    VANTA.GLOBE({
+      el: "#vanta-canvas",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: true,
+      minHeight: 200.00,
+      minWeight: 200.00,
+      scale: 1.0,
+      scaleMobile: 1.0,
+      backgroundColor: 0x2D2926,
+      color: 0x5f367e,
+      color2: 0xffffff
+    })
+  </script>
+
+  <!-- // ABOUT US BACKGROUND -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
+  <script type="text/javascript">
+    VANTA.TOPOLOGY({
+      el: "#vanta-canvas-aboutus",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00
+    })
+  </script>
+
+  <!-- Slider Hover -->
   <script>
     const slideValue = document.querySelector("span");
     const inputSlider = document.querySelector("input");
@@ -117,15 +170,16 @@
       slideValue.classList.remove("show");
     });
 
+    // Slider Color Range Input
     inputSlider.addEventListener("input", function () {
       var x = inputSlider.value;
       x = x * 2;
-      color = 'linear-gradient(to right, #5f367e ' + (x-5) + '%, white ' + (x-5) + '%)';
+      color = 'linear-gradient(to right, #5f367e ' + (x - 5) + '%, white ' + (x - 5) + '%)';
 
       $("#sliderBar").css("background", color);
     })
-
   </script>
+
 </body>
 
 </html>
